Bug 326139 - KOrganizer forgets Free/Busy configuration
Summary: KOrganizer forgets Free/Busy configuration
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: groupware (other bugs)
Version First Reported In: 4.11.2
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-17 15:25 UTC by itsef-admin
Modified: 2013-10-23 08:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description itsef-admin 2013-10-17 15:25:58 UTC
When scheduling events with other attendees (using a Kolab V2 account), I noticed that I cannot see any busy times of the other attendees. When I look in "Configure KOrganizer -> Free/Busy -> Retrieve", all fields are empty despite having set up the account using the account wizard. When I fill everything in manually, Free/Busy retrieval seems to work. Once I close KOrganizer, Free/Busy retrieval stops working and all fields in "Configure KOrganizer -> Free/Busy -> Retrieve" are empty again.

Reproducible: Always

Steps to Reproduce:
1. In KOrganizer, go to "Configure KOrganizer -> Free/Busy -> Retrieve"
2. Fill in all required fields to make Free/Busy retrieval work
3. Close KOrganizer
4. Start KOrganizer again
5. Go to "Configure KOrganizer -> Free/Busy -> Retrieve"
6. All fields are empty and Free/Busy retrieval does not work
Actual Results:  
Free/busy configuration fields are empty after re-start and Free/Busy retrieval does not work

Expected Results:  
Free/busy configuration fields remember their values after re-start and Free/Busy retrieval works
Comment 1 itsef-admin 2013-10-22 07:18:37 UTC
Additional information: The packages I'm using are Kubuntu 13.10.

I just discovered that KOrganizer DOES store the information - everything I entered is present in $HOME/.kde/share/korganizerrc. Apparently, KOrganizer fails to read back the information on start.
Comment 2 Sergio Martins 2013-10-22 13:27:09 UTC
Git commit a05fb0f35f8c57ba56b99fc761f022249bf81737 by Sergio Martins.
Committed on 22/10/2013 at 13:26.
Pushed by smartins into branch 'KDE/4.11'.

Don't forget to write settings to disk.

M  +2    -0    korganizer/calendarview.cpp
M  +3    -0    korganizer/koprefsdialog.cpp

http://commits.kde.org/kdepim/a05fb0f35f8c57ba56b99fc761f022249bf81737
Comment 3 Sergio Martins 2013-10-22 13:30:32 UTC
> Additional information: The packages I'm using are Kubuntu 13.10.
> 
> I just discovered that KOrganizer DOES store the information - everything I
> entered is present in $HOME/.kde/share/korganizerrc. Apparently, KOrganizer
> fails to read back the information on start.

The file is supposed to be akonadi-calendarrc:

[FreeBusy Publish]
FreeBusyPublishAuto=true

[FreeBusy Retrieve]
FreeBusyFullDomainRetrieval=true
FreeBusyRetrieveAuto=true
(...)
Comment 4 itsef-admin 2013-10-23 08:28:31 UTC
Sergio, you're really on a roll here, thank you very much! I will have to wait for new Kubuntu packages, then - but you've also given me a workaround (at least when migrating users): I can copy the settings from the old ~/.kde/share/config/korganizerrc into the new ~/.kde/share/config/akonadi-calendarrc. I've tried that yesterday and it works.