Don't forget to write settings to disk.

BUG: 326139